<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnPickUp"
    android:background="#4D534E"
    tools:ignore="MissingDefaultResource">


    <ImageButton
        android:id="@+id/btn_decline"
        android:layout_width="81dp"
        android:layout_height="73dp"
        android:contentDescription="@string/declinebutton"
        android:layout_marginBottom="56dp"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_call_end_24" />

    <androidx.cardview.widget.CardView
        android:layout_width="411dp"
        android:layout_height="310dp"

        app:layout_constraintBottom_toTopOf="@+id/btn_decline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4D534E"
            android:padding="30dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="46dp"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/ic_baseline_dialpad_24" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="46dp"
                android:layout_marginTop="35dp"
                android:layout_toEndOf="@+id/imageView2"
                app:srcCompat="@drawable/ic_baseline_mic_off_24" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_below="@+id/imageView3"
                android:layout_marginStart="45dp"
                android:layout_marginTop="56dp"
                android:layout_toEndOf="@+id/imageView5"
                app:srcCompat="@drawable/ic_baseline_pause_24" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="49dp"
                android:layout_marginTop="39dp"
                android:layout_toEndOf="@+id/imageView3"
                app:srcCompat="@drawable/ic_baseline_volume_up_24" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_below="@+id/imageView4"
                android:layout_marginStart="45dp"
                android:layout_marginTop="55dp"
                android:layout_toEndOf="@+id/imageView6"
                app:srcCompat="@drawable/ic_baseline_videocam_24" />

            <ImageView
                android:id="@+id/imageView5"

                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_below="@+id/imageView2"
                android:layout_alignParentStart="true"
                android:layout_marginStart="46dp"
                android:layout_marginTop="55dp"
                app:srcCompat="@drawable/ic_baseline_add_ic_call_24" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="411dp"
        android:layout_height="236dp"
        android:background="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4CAF50">

            <Chronometer
                android:id="@+id/tvTimeCounter"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="103dp"
                android:layout_marginEnd="87dp"
                android:layout_marginBottom="31dp"
                android:text="@string/timecounter"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvCallerNameDisplays"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_above="@+id/tvTimeCounter"
                android:layout_marginBottom="-9dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@string/caller_name"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/tvCallerNumberDisplays"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_above="@+id/tvCallerNameDisplays"
                android:layout_marginBottom="-3dp"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/caller_number"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:ignore="TextViewEdits" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>