<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:elevation="10dp"
    android:padding="20dp"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvCallerName"
        android:layout_width="347dp"
        android:layout_height="54dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvCallerName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/caller_name"
                android:nextFocusDown="@+id/tvCallerNumber"
                android:paddingStart="20dp"
                android:textColorHint="#616161"
                tools:ignore="RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCallerNumber"
        android:layout_width="347dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="316dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCallerName">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvCallerNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="10dp"
                android:hint="@string/caller_number"
                android:paddingStart="20dp"
                android:nextFocusDown="@+id/cvRingtone"
                android:phoneNumber="true"
                android:textColorHint="#616161"
                tools:ignore="Deprecated,RtlSymmetry,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTimer"
        android:layout_width="275dp"
        android:layout_height="106dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="withEditText"
        android:padding="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_clock"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:src="@drawable/ic_clock"
                android:layout_margin="10dp"
                app:contentPadding="@dimen/cardview_default_elevation" />


            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="17dp"
                    android:text="Timer"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvTimerSec"
                    android:layout_width="163dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/timerTime" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRingtone"
        android:layout_width="277dp"
        android:layout_height="97dp"
        android:padding="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivRingtone"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:src="@drawable/ic_bell"
                android:layout_margin="10dp"
                app:contentPadding="@dimen/cardview_default_elevation" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvRingtone"
                        android:layout_width="163dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="9dp"
                        android:text="Ringtone"
                        android:textAlignment="textStart"
                        android:textSize="24sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/tvRingtoneName"
                        android:layout_width="163dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:text="Default"
                        android:textAlignment="textStart"
                        tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDone"
        android:layout_width="129dp"
        android:layout_height="69dp"
        android:layout_marginBottom="36dp"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>